<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity2">

    <ImageView
        android:id="@+id/signUp_1_Logo2"
        android:layout_width="319dp"
        android:layout_height="73dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/signUp2_button"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/SignUp2_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp2_age" />

    <Spinner
        android:id="@+id/signUp2_province"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:entries="@array/signUp2_province"
        android:minHeight="48dp"
        android:prompt="@string/signUp2_province_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_1_Logo2" />

    <Spinner
        android:id="@+id/signUp2_genre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:entries="@array/signUp2_genre"
        android:minHeight="48dp"
        android:prompt="@string/signUp2_genre_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_username5" />

    <EditText
        android:id="@+id/signUp2_postalcode"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ellipsize="none"
        android:ems="10"
        android:hint="@string/signUp2_postalCode_hint"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/signUp2_province"
        app:layout_constraintTop_toBottomOf="@+id/signUp2_country" />

    <EditText
        android:id="@+id/signUp1_username5"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signUp2_address_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp2_province" />

    <EditText
        android:id="@+id/signUp2_age"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/signUp2_age_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_username5" />

    <Spinner
        android:id="@+id/signUp2_country"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:entries="@array/signUp2_countries"
        android:minHeight="48dp"
        android:prompt="@string/signUp2_country_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_1_Logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>