<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity1">

    <ImageView
        android:id="@+id/SignUp_1_Logo"
        android:layout_width="319dp"
        android:layout_height="73dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/signUp1_button"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/signUp1_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_email" />

    <TextView
        android:id="@+id/signUp1_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:text="@string/signUp1_signin_text"
        android:textColor="#1976D2"
        android:textIsSelectable="false"
        app:layout_constraintStart_toEndOf="@+id/signUp1_account"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_button" />

    <EditText
        android:id="@+id/signUp1_password"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/signUp1_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_username" />

    <EditText
        android:id="@+id/signUp1_username"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/signUp1_username_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_name" />

    <TextView
        android:id="@+id/login_showPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:text="@string/login_showPassword"
        android:textColor="#1976D2"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_email" />

    <EditText
        android:id="@+id/signUp1_email"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/signUp1_username_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_password" />

    <EditText
        android:id="@+id/signUp1_name"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/signUp1_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_1_Logo" />

    <TextView
        android:id="@+id/signUp1_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/signUp1_Account_text"
        android:textColor="#464749"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_button" />

    <TextView
        android:id="@+id/showTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp1_account" />

</androidx.constraintlayout.widget.ConstraintLayout>